unpackaged/main/default/objects/sixsense__X6sense_Account_Score__c/sixsense__X6sense_Account_Score__c.object-meta.xml
<CustomObject>
    <description>Custom object to capture the 6sense Account Scores for existing 6sense accounts.</description>
    <label>6sense Account Score</label>
    <nameField>
        <label>Product Category</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>6sense Account Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>