unpackaged/main/default/objects/sixsense__X6sense_Account_Score__c/fields/sixsense__Numerical_Reach_Score__c.field-meta.xml
<CustomField>
    <fullName>sixsense__Numerical_Reach_Score__c</fullName>
    <label>Numerical Reach Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>