unpackaged/main/default/objects/sixsense__X6sense_Account_Score__c/fields/sixsense__ProfileScore__c.field-meta.xml
<CustomField>
    <fullName>sixsense__ProfileScore__c</fullName>
    <label>Profile Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>