unpackaged/main/default/objects/sixsense__X6sense_Account_Score__c/fields/sixsense__X6QA__c.field-meta.xml
<CustomField>
    <fullName>sixsense__X6QA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>6QA</label>
    <type>Checkbox</type>
</CustomField>