unpackaged/main/default/objects/sixsense__X6sense_Account_Score__c/fields/sixsense__X6QA_Age_in_Days__c.field-meta.xml
<CustomField>
    <fullName>sixsense__X6QA_Age_in_Days__c</fullName>
    <label>6QA Age in Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>