unpackaged/main/default/objects/sixsense__X6sense_Account_Score__c/fields/sixsense__X6QA_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>sixsense__X6QA_Start_Date__c</fullName>
    <label>6QA Start Date</label>
    <type>Date</type>
</CustomField>